--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
     <body>
-      <div class="main">
+      <main class="main">
         <h1 class=" nome animate__animated animate__fadeInDown"> BACKGROUND SOUND MACHINE V1.0</h1>
         <script src="" async defer></script>
         <button class="button-92 enter animate__animated animate__bounceIn animate__delay-2s" 
         role="button" onclick="window.location.href='makna.html'" >Press to Start</button>
-    </div>
+    </main>
     <footer class="autor"> by Micael Nisa</footer>
     </body>
 </html>
