--- a/makna.html
+++ b/makna.html
@@ -13,7 +13,9 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
     <body>
+      <main class="main">
       <h1 class="nome"> Em fazimento...</h1>
+    </main>
     <footer class="autor"> by Micael Nisa</footer>
     </body>
 </html>
